Feat: UserNotFoundException